# event-aggregator

./: .dockerignore  .editorconfig  .gitignore  CLAUDE.md  Makefile  README.md  package-lock.json  package.json
backend/: .coverage  .coveragerc  .dockerignore  .env.example  alembic.ini  import_example.xlsx  import_example2.xlsx  pyproject.toml  pytest.ini  seed_admin.py
backend/.github/workflows/: tests.yml
backend/app/: lifespan.py  main.py
backend/app/api/: __init__.py  router.py
backend/app/core/: config.py  constants.py  email.py  exceptions.py  notifications.py  security.py  storage.py  tasks.py  templates.py
backend/app/database/: session.py
backend/app/dependencies/: auth.py  database.py
backend/app/middleware/: cors.py  error_handler.py  session.py
backend/app/models/: __init__.py  category.py  enums.py  event.py  import_job.py  import_row_result.py  notification.py  notification_template.py  organizer.py  participation.py  permission.py  role.py  role_permission.py  user.py
backend/app/repositories/: __init__.py  base.py  category.py  event.py  import_job.py  import_row_result.py  notification.py  notification_template.py  organizer.py  participation.py  permission.py  role.py  role_permission.py  statistics.py  user.py
backend/app/routers/: health.py
backend/app/schemas/: __init__.py  auth.py  base.py  category.py  event.py  event_search.py  import_job.py  import_row.py  import_row_result.py  notification.py  organizer.py  page.py  participation.py  permission.py  role.py  role_permission.py  statistics.py  user.py
backend/app/services/: __init__.py  auth.py  cleanup_worker.py  event.py  exceptions.py  import_job.py  import_processor.py  notification.py  notification_sender.py  organizer.py  participation.py  permission.py  role.py  scheduled_notification_worker.py  statistics.py  transaction.py  user.py
backend/tests/: conftest.py
backend/tests/api/: test_auth.py  test_dashboard.py  test_events.py  test_health.py  test_imports.py  test_notifications.py
backend/tests/factories/: __init__.py  base.py  role.py  user.py
backend/tests/fixtures/: auth.py  client.py  data.py  database.py
backend/tests/integration/: test_auth_flow.py  test_event_workflow.py  test_import_workflow.py  test_notification_workflow.py
backend/tests/repositories/: test_base.py  test_event.py  test_import_job.py  test_import_row_result.py  test_notification.py  test_notification_template.py  test_organizer.py  test_participation.py  test_permission.py  test_role.py  test_statistics.py  test_user.py
backend/tests/services/: test_auth.py  test_event.py  test_notification.py  (+5 more)
(+182 files in other folders)
